package isep.desosfs.arcadehaven.Domain.Enums;



public enum EntryStatus {
    ACTIVE,
    REFUNDED,
    SUSPENDED
}