package isep.desosfs.arcadehaven.Domain.Enums;


public enum FileType {
    IMAGE,
    SCREENSHOT,
    COVER
}
