package isep.desosfs.arcadehaven.Domain.Enums;

public enum GameStatus {
    PENDING,
    ACTIVE,
    REMOVED
}
