package isep.desosfs.arcadehaven.Domain.Enums;

public enum OrderStatus {
    PENDING,
    COMPLETED,
    CANCELLED
}
