package isep.desosfs.arcadehaven.Domain.Enums;

public enum Role {
    ADMIN,
    PUBLISHER,
    BUYER
}
